--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ authors = ["yutopp <yutopp@gmail.com>"]
 
 [dependencies]
 libc = "0.2.34"
+slog = "2.0.12"
+sloggers = "*"
 scopeguard = "0.3.3"
+ipc-channel = "*"
+serde = "1.0.23"
+serde_derive = "1.0.23"
+serde_json = "1.0.7"
